--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=api-techsupport
+spring.datasource.url=jdbc:mysql://localhost:3306/techsupport_api
+spring.datasource.username=root
+spring.datasource.password=030497danilo
