--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=api-techsupport
 spring.datasource.url=jdbc:mysql://localhost:3306/techsupport_api
 spring.datasource.username=root
 spring.datasource.password=030497danilo
+
+spring.flyway.url=jdbc:mysql://localhost:3306/techsupport_api
+spring.flyway.user=root
+spring.flyway.password=030497danilo
+spring.flyway.locations=classpath:db/migration
