Criação do dto e serviços na classe tag

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.flyway.url=jdbc:mysql://localhost:3306/techsupport_api
 spring.flyway.user=root
 spring.flyway.password=030497danilo
 spring.flyway.locations=classpath:db/migration
+
+# Mostra as queries sendo executadas
+hibernate.show_sql=true
