Arrumando erros e criando a tabela com a migartion e after migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=030497danilo
 spring.flyway.url=jdbc:mysql://localhost:3306/techsupport_api
 spring.flyway.user=root
 spring.flyway.password=030497danilo
-spring.flyway.locations=classpath:db/migration
+spring.flyway.locations=classpath:db/migration,classpath:db/afterMigrate
 
 # Mostra as queries sendo executadas
 hibernate.show_sql=true
